# adventOfCode

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: linkedlist.c.E1BDB0DE9F62F9FA.idx  linkedlist.h.894DA58184E28FC9.idx  part1.c.5F26C0285193F239.idx  stringman.c.90B4E11F347D45A8.idx  stringman.h.0D41E03CAD78BB1E.idx  util.c.2F3193756313B3A8.idx  util.h.953022F312818255.idx
2022/01/: part1.c  part2.c
2022/1st/: a.out  source.c
2023/01/: part1.c
2023/02/: part1.c  part2.c
2023/2nd/: a.out
2024/: .gitignore
2024/02/: Main.hs  haskNotes.txt
2024/03/app/: Main.hs
2024/04/: Two.hs  language.txt
2024/05/: Main.hi
2024/07/: Main.hs
2024/1st/: main.py  output.txt
2024/2nd/: CHANGELOG.md  First.cabal  LICENSE  test.txt
2024/2nd/app/: Main.hs  One.hs
2024/2nd/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2024/3rd/: 3rd.cabal  CHANGELOG.md  LICENSE  One.hs
2024/3rd/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2024/4th/: Main.hi  One.hs  StupidBs.hi  Two.hi
2024/5th/: Main.hs
2024/6th/: Main.hi  Main.hs  One.hs  main.py
include/: darray.h  linkedlist.h  stringman.h  util.h
src/: darray.c  linkedlist.c  stringman.c  util.c
